--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,9 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
+# dotenv environment variables file
+.env
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
